section_14/k8s/redis-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
