section_14/k8s/server-clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-clusterip
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 5000
    targetPort: 5000
